Re-enable JBR for local testing